--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+
+
+@media only screen and (max-width: 600px) {
+  .header {grid-area: 1 / span 6;
+  }
+  .menu {
+    display: none;
+  }
+}
+
+
+.logo{
+  /*Loggo samma storlek och margin i desktop och mobile */
+  width: 128px;
+  height: 82px;
+  margin-top: 26px;
+  margin-left: 27px;
+}
 header{
     background-color: #011827;
     font-family: roboto;
@@ -6,32 +24,4 @@ header{
     color:white;
     font-family: "Roboto", sans-serif;
     font-style: bold;
-}
-
-.playOne {
-  border: none;
-  color:white;
-  background-color: #011827;
-}
-
-.playTwo {
-  border: none;
-  color:white;
-  background-color: #011827;
-}
-
-.story {
-  border: none;
-  color:white;
-  background-color: #011827;
-}
-
-.contact {
-  border: none;
-  color:white;
-  background-color: #011827;
-}
-
-.checked {
-  color: rgb(255, 0, 0);
 }
