--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,60 @@
-
+body {
+  width: 1280px;
+}
 
 @media only screen and (max-width: 600px) {
-  .header {grid-area: 1 / span 6;
+  header {
+    grid-area: 1 / span 6;
+    margin: 0px;
+    height: 144px;
   }
+
   .menu {
     display: none;
   }
+
+  .onlineBtn {
+    display: none;
+  }
+
+  .headFlex {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .head {
+    display: flex;
+    font-size: 24px;
+    font-style: bold;
+    font-weight: 700;
+    width: 78px;
+    height: 84px;
+    margin-top: 26px;
+    margin-left: 15px;
+  }
+
 }
 
+.headPic {
+  max-width: 100%;
+  margin: 0px;
+}
 
-.logo{
+.logo {
   /*Loggo samma storlek och margin i desktop och mobile */
   width: 128px;
   height: 82px;
   margin-top: 26px;
   margin-left: 27px;
 }
-header{
-    background-color: #011827;
-    font-family: roboto;
+
+header {
+  background-color: #011827;
+  font-family: roboto;
 }
-.head{
-    color:white;
-    font-family: "Roboto", sans-serif;
-    font-style: bold;
+
+.head {
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-style: bold;
 }
