--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,34 @@ body {
     height: 144px;
   }
 
-  .menu {
+  .playOne,
+  .playTwo,
+  .story,
+  .contact {
     display: none;
+  }
+
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .onsiteBtn {
+    position: absolute;
+    top: 66px;
+  }
+
+  .mobileOnline {
+    color: #36769D;
+    position: absolute;
+    font-size: 16px;
+    font-weight: 700;
+    top: 160px;
+    width: 308px;
+    height: 30pxx;
+    border: none;
+    text-decoration: underline;
   }
 
   .onlineBtn {
@@ -23,7 +49,6 @@ body {
   }
 
   .head {
-    display: flex;
     font-size: 24px;
     font-style: bold;
     font-weight: 700;
@@ -32,12 +57,10 @@ body {
     margin-top: 26px;
     margin-left: 15px;
   }
-
-}
-
-.headPic {
-  max-width: 100%;
-  margin: 0px;
+  
+  .reviewTwo {
+    display: none;
+  }
 }
 
 .logo {
@@ -49,12 +72,138 @@ body {
 }
 
 header {
+  grid-area: 1 / span 6;
   background-color: #011827;
-  font-family: roboto;
+  font-family: "Roboto", sans-serif;
+  width: 1280px;
+  height: 216px;
+}
+
+.headFlex {
+  display: flex;
+  flex-direction: row;
 }
 
 .head {
+  display: flex;
   color: white;
   font-family: "Roboto", sans-serif;
   font-style: bold;
+  font-size: 40px;
+  font-style: bold;
+  font-weight: 700;
+  align-items: last baseline;
+  margin-left: 15px;
+  margin-top: 61px;
+}
+
+.menu {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 60px;
+}
+
+.playOne {
+  font-style: "Roboto", sans-serif;
+  font-style: bold;
+  font-size: 24px;
+  font-weight: 700;
+  margin-left: 215px;
+  border: none;
+  background-color: #011827;
+  color: white;
+}
+
+.playTwo {
+  font-style: "Roboto", sans-serif;
+  font-style: bold;
+  font-size: 24px;
+  font-weight: 700;
+
+  margin-left: 100px;
+  border: none;
+  background-color: #011827;
+  color: white;
+}
+
+.story {
+  font-style: "Roboto", sans-serif;
+  font-style: bold;
+  font-size: 24px;
+  font-weight: 700;
+
+  margin-left: 100px;
+  border: none;
+  background-color: #011827;
+  color: white;
+}
+
+.contact {
+  font-style: "Roboto", sans-serif;
+  font-style: bold;
+  font-size: 24px;
+  font-weight: 700;
+  margin-left: 100px;
+  margin-right: auto;
+  border: none;
+  background-color: #011827;
+  color: white;
+}
+
+.playOne:hover,
+.playTwo:hover,
+.story:hover,
+.contact:hover {
+  color: #8ACFE5;
+}
+
+.headPic {
+  position: relative;
+  max-width: 100%;
+  margin: 0px;
+}
+
+.btn {
+  position: absolute;
+  bottom: -25px;
+  left: 323px;
+  display: flex;
+  gap: 15px;
+  z-index: 10;
+}
+
+.onlineBtn {
+  width: 308px;
+  height: 66px;
+  border: none;
+  background-color: #E3170A;
+  color: white;
+  border-radius: 5px;
+  font-style: "Roboto", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.onsiteBtn {
+  width: 308px;
+  height: 66px;
+  border: none;
+  background-color: #8ACFE5;
+  border-radius: 5px;
+  font-style: "Roboto", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+
+}
+
+.mobileOnline {
+  display: block;
+  /* Show by default on mobile */
+}
+
+@media (min-width: 600px) {
+  .mobileOnline {
+    display: none;
+    /* Hide on screens 600px and above */
+  }
 }
