--- a/css/main.css
+++ b/css/main.css
@@ -21,22 +21,34 @@ body {
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: space-between;
+    
     
   }
 
   .onsiteBtn {
-    position: absolute;
-    top: 66px;
+    display: none;
     
   }
-
+  .mobileOnsite{
+    position: absolute;
+    background-color: #8ACFE5;
+    border-radius: 5px;
+    font-size: 30px;
+    font-weight: 700;
+    top: 50px;
+    left: -150px;
+    width: 750px;
+    height: 100px;
+    border: none;
+    text-decoration: underline;
+  }
   .mobileOnline {
     color: #36769D;
+    background-color: white;
     position: absolute;
     font-size: 16px;
     font-weight: 700;
-    top: 160px;
+    top: 180px;
     width: 308px;
     height: 30pxx;
     border: none;
@@ -257,5 +269,8 @@ header {
   .mobileOnline {
     display: none;
     /* Hide on screens 600px and above */
+  }
+  .mobileOnsite {
+    display:none;
   }
 }
