--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 body {
   width: 1280px;
+ text-align: center;
+ margin:auto;
 }
 
 @media only screen and (max-width: 600px) {
@@ -77,7 +79,7 @@ body {
   .reviewOne {
     /*Lägg centrerad på sidan*/
     padding-top: 200px;
-    padding-left: 100px;
+    padding-left: 150px;
 
   }
 
