--- a/css/mobile.css
+++ b/css/mobile.css
@@ -35,7 +35,6 @@
         height: 140px;
         margin-top: 20px;
         margin-left: 27px;
-
     }
 
     .playOne,
@@ -76,7 +75,6 @@
         height: 100px;
         margin-bottom: 50px;
         border: none;
-
     }
 
     .userImg {
@@ -120,16 +118,28 @@
         height: auto;
     }
 
-    .card {
+    .scroll {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        white-space: nowrap;
+        margin-left: 10%;
+        margin-right: 10%;
+        width: auto;
+        gap: 50px;
+    }
 
-        width: 750px;
+    .card .cardTwo .cardTree {
+        display: block;
+        max-width: 100%;
+        margin-left: 20px;
         border-radius: 15px;
         overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.793);
         font-family: "Roboto", sans-serif;
         background-color: white;
         border: #011827;
-        margin-left: 20%;
     }
 
     .roomTitle {
@@ -149,32 +159,89 @@
     .participants {
         font-family: "Roboto" sans-serif;
         font-size: 20px;
-        margin-left: -270px;
+        margin-left: -170px;
         font-weight: 400;
         margin-top: -50px;
     }
-    .roomInfoOne {
+
+    .roomInfo {
         font-family: "Roboto" sans-serif;
         font-size: 30px;
         text-align: center;
         font-weight: 400;
     }
 
-    .bookOne {
-      float: right;
-      width: 300px;
-      height: 90px;
-      margin-right: 20px;
-      margin-bottom: 20px;
-      background-color: #E3170A;
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 24px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s;
+    .book {
+        float: right;
+        width: 300px;
+        height: 90px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        background-color: #E3170A;
+        color: white;
+        border: none;
+        padding: 12px;
+        font-size: 24px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: bold;
+        transition: background-color 0.3s;
     }
 
+    .btnTwo{
+        list-style: none;
+    }
+
+    .mobileOnlineTwo {
+        display: inline block;
+        list-style: none;
+        color: #36769D;
+        background-color: white;
+        font-size: 24px;
+        font-weight: 700;
+        top: 180px;
+        width: 308px;
+        height: 30px;
+        border: none;
+        text-decoration: underline;
+    }
+
+    .onsiteBtnTwo {
+        background-color: #8ACFE5;
+        border-radius: 5px;
+        font-size: 30px;
+        font-weight: 700;
+        width: 80%;
+        height: 100px;
+        margin-bottom: 50px;
+        border: none;
+        margin-top: 20px;
+    }
+    .onlineBtnTwo {
+        display: none;
+    }
+
+    .about{
+        background-color: #011827;
+        color: white;
+        height: 800px;
+        font-size: 60px;
+        font-style: "Roboto" sans-serif;
+        font-style: normal;
+        font-weight: 100;
+        text-align: center;
+        padding-top: 100px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .aboutBtn{
+         border-color: #8ACFE5;
+        color: #8ACFE5;
+        background-color: #011827;
+        margin-top:55px;
+        width: 500px;
+        height: 150px;
+        border-radius: 5px;
+        font-size: 50px;
+    }
 }
