--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@ body {
 
 
 @media (min-width: 601px) {
-  .mobileOnline, .mobileOnlineTwo {
+
+  .mobileOnline,
+  .mobileOnlineTwo {
     display: none;
     /* Hide on screens 600px and above */
   }
@@ -220,7 +222,6 @@ body {
   }
 
   .card {
-
     display: flex;
     flex-direction: column;
     width: 500px;
@@ -268,7 +269,6 @@ body {
   .star {
     float: left;
     margin-left: 10px;
-
   }
 
   .participants {
@@ -343,32 +343,113 @@ body {
     font-size: 22px;
     font-weight: 700;
   }
-  .about{
-        background-color: #011827;
-        color: white;
-        width: 1280px;
-        height: 500px;
-        font-size: 28px;
-        font-style: "Roboto" sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        text-align: center;
-        padding-top: 50px;
-        
-    }
-    
-    .aboutBtn{
-        border-color: #8ACFE5;
-        color: #8ACFE5;
-        background-color: #011827;
-        margin-top: 40px;
-        width: 350px;
-        height: 90px;
-        border-radius: 5px;
-        font-size: 25px;
-        font-style: normal;
-        font-family: "Roboto" sans-serif;
-        font-weight: 700;
-        
-    }
+
+  .about {
+    background-color: #011827;
+    color: white;
+    width: 1280px;
+    height: 500px;
+    font-size: 35px;
+    font-style: "Roboto" sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 50px;
+  }
+
+  .aboutBtn {
+    border-color: #8ACFE5;
+    color: #8ACFE5;
+    background-color: #011827;
+    margin-top: 40px;
+    width: 350px;
+    height: 90px;
+    border-radius: 5px;
+    font-size: 25px;
+    font-style: normal;
+    font-family: "Roboto" sans-serif;
+    font-weight: 700;
+  }
+
+
+  .bookingImg {
+    float: left
+  }
+
+  .bookingHead {
+    display: flex;
+    text-align: left;
+    font-size: 50px;
+    font-family: "Roboto" sans-serif;
+    font-weight: 700;
+    padding-left: 40px;
+    padding-right: 50px;
+  }
+
+  .bookingText {
+    display: flex;
+    text-align: left;
+    font-family: "Roboto" sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .bookingBtn {
+    display: block;
+    align-items: center;
+    width: 308px;
+    height: 66px;
+    border: none;
+    background-color: #E3170A;
+    color: white;
+    border-radius: 5px;
+    font-style: "Roboto", sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    margin-left: 800px;
+    margin-bottom: 50px;
+  }
+
+  .challengesImg {
+    float: right;
+  }
+
+  .challengesHead {
+    display: flex;
+    text-align: left;
+    font-size: 40px;
+    font-family: "Roboto" sans-serif;
+    font-weight: 700;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .challengesText {
+    display: flex;
+    text-align: left;
+    font-family: "Roboto" sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .challengesBtn {
+    display: block;
+    align-items: center;
+    width: 308px;
+    height: 66px;
+    border: none;
+    background-color: #E3170A;
+    color: white;
+    border-radius: 5px;
+    font-style: "Roboto", sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    margin-left: 150px;
+    margin-bottom: 50px;
+
+  }
 }
