--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ body {
     font-family: "Roboto", sans-serif;
     font-style: bold;
     font-size: 40px;
-    font-style: bold;
     font-weight: 700;
     align-items: last baseline;
     margin-left: 15px;
@@ -56,7 +55,7 @@ body {
   }
 
   .playOne {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: bold;
     font-size: 25px;
     font-weight: 700;
@@ -68,7 +67,7 @@ body {
   }
 
   .playTwo {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: bold;
     font-size: 25px;
     font-weight: 700;
@@ -80,7 +79,7 @@ body {
   }
 
   .story {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: bold;
     font-size: 25px;
     font-weight: 700;
@@ -92,7 +91,7 @@ body {
   }
 
   .contact {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: bold;
     font-size: 25px;
     font-weight: 700;
@@ -122,7 +121,7 @@ body {
     background-color: #E3170A;
     color: white;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
     margin-right: 20px;
@@ -135,7 +134,7 @@ body {
     border: none;
     background-color: #8ACFE5;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
   }
@@ -151,7 +150,7 @@ body {
 
   .reviewOne {
     float: left;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 24px;
     font-style: italic;
     font-weight: 400;
@@ -163,7 +162,7 @@ body {
 
   .reviewTwo {
     float: right;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 24px;
     font-style: italic;
     font-weight: 400;
@@ -177,7 +176,7 @@ body {
 
   .reviewTwo {
     flex-direction: row;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 24px;
     font-style: italic;
     font-weight: 400;
@@ -189,7 +188,7 @@ body {
   }
 
   .name {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -201,7 +200,7 @@ body {
   }
 
   .popular {
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: bold;
     font-weight: 400;
     font-size: 30px;
@@ -224,7 +223,7 @@ body {
   .card {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 400px;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
     font-family: "Roboto", sans-serif;
@@ -236,7 +235,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 400px;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
     font-family: "Roboto", sans-serif;
@@ -249,7 +248,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 400px;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
     font-family: "Roboto", sans-serif;
@@ -284,10 +283,12 @@ body {
 
   .roomInfo {
     font-family: "Roboto" sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     text-align: justify;
     font-weight: 400;
     margin-left: 10px;
+    padding: 20px;
+    
   }
 
   .book {
@@ -304,7 +305,6 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
-    transition: background-color 0.3s;
   }
 
   .btnTwo {
@@ -326,7 +326,7 @@ body {
     background-color: #E3170A;
     color: white;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
     margin-right: 20px;
@@ -339,7 +339,7 @@ body {
     border: none;
     background-color: #8ACFE5;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
   }
@@ -350,7 +350,7 @@ body {
     width: 1280px;
     height: 500px;
     font-size: 35px;
-    font-style: "Roboto" sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 400;
     text-align: center;
@@ -405,7 +405,7 @@ body {
     background-color: #E3170A;
     color: white;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
     margin-left: 800px;
@@ -445,11 +445,95 @@ body {
     background-color: #E3170A;
     color: white;
     border-radius: 5px;
-    font-style: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 22px;
     font-weight: 700;
     margin-left: 150px;
     margin-bottom: 50px;
 
+  }
+
+  footer {
+    display: flex;
+    margin-top: 400px;
+    background-color: #011827;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    width: 1280px;
+    height: 467px;
+  }
+  .footerAbout{
+    display: block;
+    
+  }
+  .footerHead {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    padding-top: 150px;
+    
+  }
+
+  .footerText {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    padding-left: 80px;
+    width: 300px;
+    text-align: left;
+    margin-top: -10px;
+  }
+
+  .siteMap {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    display: block;
+    color:white; 
+    text-align: left;
+    margin-left: 300px;
+  }
+ 
+  .siteMapHead{
+    display: flex;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    padding-left: 40px;
+    padding-top: 150px;
+    
+  }
+  .siteList{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    list-style: none;
+    text-align: left;
+    margin-top: -10px;
+  }
+   .socials {
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    display: block;
+    color:white; 
+    text-align: left;
+  }
+  .socialHead{
+    display: flex;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    padding-left: 140px;
+    padding-top: 150px;
+  }
+  .socialList{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    list-style: none;
+    padding-left: 150px;
+    margin-top: -10px;
   }
 }
