--- a/css/mobile.css
+++ b/css/mobile.css
@@ -57,6 +57,7 @@
         list-style: none;
         color: #36769D;
         background-color: white;
+        font-family: "Roboto", sans-serif;
         font-size: 24px;
         font-weight: 700;
         top: 180px;
@@ -68,6 +69,7 @@
 
     .onsiteBtn {
         background-color: #8ACFE5;
+        font-family: "Roboto", sans-serif;
         border-radius: 5px;
         font-size: 30px;
         font-weight: 700;
@@ -83,7 +85,7 @@
 
     .reviewOne {
         padding-left: 300px;
-        font-style: "Roboto", sans-serif;
+        font-family: "Roboto", sans-serif;
         font-size: 24px;
         font-style: italic;
         font-weight: 400;
@@ -98,7 +100,7 @@
     }
 
     .name {
-        font-style: "Roboto", sans-serif;
+        font-family: "Roboto", sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
@@ -106,7 +108,7 @@
     }
 
     .popular {
-        font-style: "Roboto", sans-serif;
+        font-family: "Roboto", sans-serif;
         font-style: bold;
         font-weight: 400;
         font-size: 45px;
@@ -128,20 +130,43 @@
         margin-right: 10%;
         width: auto;
         gap: 50px;
+        font-family: "Roboto", sans-serif;  
     }
+     .card {
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+    border: #011827;
+  }
+  .cardTwo {
 
-    .card .cardTwo .cardTree {
-        display: block;
-        max-width: 100%;
-        margin-left: 20px;
-        border-radius: 15px;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.793);
-        font-family: "Roboto", sans-serif;
-        background-color: white;
-        border: #011827;
-    }
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+    border: #011827;
+    margin-left: 20px;
+  }
 
+    .cardThree {
+
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.233);
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+    border: #011827;
+    margin-left: 20px;
+  }
     .roomTitle {
         font-family: "Roboto" sans-serif;
         font-size: 50px;
@@ -169,6 +194,7 @@
         font-size: 30px;
         text-align: center;
         font-weight: 400;
+        padding: 20px;
     }
 
     .book {
@@ -227,7 +253,7 @@
         color: white;
         height: 800px;
         font-size: 60px;
-        font-style: "Roboto" sans-serif;
+        font-family: "Roboto", sans-serif;
         font-style: normal;
         font-weight: 100;
         text-align: center;
@@ -281,7 +307,7 @@
         background-color: #E3170A;
         color: white;
         border-radius: 5px;
-        font-style: "Roboto", sans-serif;
+        font-family: "Roboto", sans-serif;
         font-size: 22px;
         font-weight: 700;
         margin-left: 150px;
@@ -329,4 +355,82 @@
         margin-left: 150px;
         margin-bottom: 50px;
     }
+
+    footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 400px;
+    background-color: #011827;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    width: auto;
+    height: auto;
+    padding-left: 40px;
+  }
+
+  .footerHead {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    margin-left: -900px;
+    
+  }
+   .footerText {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    width: 700px;
+    text-align: left;
+    
+  }
+
+  .siteMap {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color:white; 
+    text-align: left;
+    
+  }
+ 
+  .siteMapHead{
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+    
+    
+  }
+    .siteList{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    list-style: none;
+    text-align: left;
+    margin-left: -30px;
+    
+  }
+   .socials {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    display: block;
+    color:white; 
+    text-align: left;
+  }
+  .socialHead{
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+    
+  }
+  .socialList{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    list-style: none;
+    text-align: left;
+    margin-left: -30px;
+  }
 }
